--- a/index.ipynb
+++ b/index.ipynb
@@ -189,11 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art Vandelay'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
     "\"art vandelay\".title()"
@@ -214,7 +223,8 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\" # 'CEO'\n",
+    "\"Ceo\""
    ]
   },
   {
