--- a/index.ipynb
+++ b/index.ipynb
@@ -245,23 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vandelay@vandelay.co\".endswith(\".co\")"
+    "\"art.vandelay@vandelay.co\".endswith(\".com\")"
    ]
   },
   {
