Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,22 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'7285553334'"
+       "7285553336"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"7285553334\" # 7285553336"
+    "\"7285553334\" # 7285553336\n",
+    "int(\"7285553334\") + 2"
    ]
   },
   {
